crates/ty_python_semantic/resources/mdtest/snapshots/no_matching_overload…_-_No_matching_overload…_-_A_class_constructor_…_(dd9f8a8f736a329).snap
---
source: crates/ty_test/src/lib.rs
expression: snapshot
---
---
mdtest name: no_matching_overload.md - No matching overload diagnostics - A class constructor with unmatched overloads
mdtest path: crates/ty_python_semantic/resources/mdtest/diagnostics/no_matching_overload.md
---

# Python source files

## mdtest_snippet.py

```
1 | type()  # error: [no-matching-overload]
```

# Diagnostics

```
error[no-matching-overload]: No overload of class `type` matches arguments
 --> src/mdtest_snippet.py:1:1
  |
1 | type()  # error: [no-matching-overload]
  | ^^^^^^
  |
help: `builtins.type()` can either be called with one or three positional arguments (got 0)
info: rule `no-matching-overload` is enabled by default

```
